--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
   --white: #FFFFFF;
   --text-primary: #210203;
   --text-secondary: #6A6B83;
+  --foter: #102127;
 }
 
 /* Reset and Base Styles */
